[gd_scene load_steps=15 format=2]

[ext_resource path="res://manager/interface/InterfaceSelectManager.gd" type="Script" id=1]
[ext_resource path="res://level/sigurd/Level0.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/norse/img/background-black.png" type="Texture" id=3]
[ext_resource path="res://interface/norse/tile/TilesHUB.tres" type="TileSet" id=4]
[ext_resource path="res://interface/norse/font/Norsebold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://interface/norse/img/hero/sigurd/Hero_GUI_0.png" type="Texture" id=6]
[ext_resource path="res://interface/norse/img/hero/sigurd/Hero_GUI_1.png" type="Texture" id=7]
[ext_resource path="res://interface/norse/img/hero/sigurd/Hero_GUI_2.png" type="Texture" id=8]
[ext_resource path="res://interface/norse/font/Norse.otf" type="DynamicFontData" id=9]
[ext_resource path="res://sound/Landing-Vanaheimr.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 5
outline_color = Color( 0.156863, 0.156863, 0.156863, 1 )
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "play",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 35
outline_size = 2
outline_color = Color( 0.352941, 0.262745, 0.0313726, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0.309804, 0.301961, 0.301961, 1 )
font_data = ExtResource( 9 )

[node name="SelectLevelInterface" type="Node2D"]
script = ExtResource( 1 )
saga0_level0 = ExtResource( 2 )

[node name="Layer 0 - Background" type="CanvasLayer" parent="."]
layer = -3

[node name="TextureRect" type="TextureRect" parent="Layer 0 - Background"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Layer 1 - Border" type="CanvasLayer" parent="."]
layer = -2

[node name="TileMap" type="TileMap" parent="Layer 1 - Border"]
position = Vector2( 10, 5 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 84, 84 )
format = 1
tile_data = PoolIntArray( 0, -1073741821, 0, 1, -1073741820, 0, 2, -1073741820, 0, 3, -1073741820, 0, 4, -1073741820, 0, 5, -1073741820, 0, 6, -1073741820, 0, 7, -1073741820, 0, 8, -1073741820, 0, 9, -1073741820, 0, 10, -1073741820, 0, 11, 3, 0, 65536, 1610612740, 0, 65547, 4, 0, 131072, 1610612740, 0, 131083, 4, 0, 196608, 1610612740, 0, 196609, -1610612734, 0, 196610, -2147483647, 0, 196611, -2147483646, 0, 196619, 4, 0, 262144, 1610612740, 0, 262155, 4, 0, 327680, 1610612740, 0, 327691, 4, 0, 393216, 1610612739, 0, 393217, -1610612732, 0, 393218, -1610612732, 0, 393219, -1610612732, 0, 393220, -1610612732, 0, 393221, -1610612732, 0, 393222, -1610612732, 0, 393223, -1610612732, 0, 393224, -1610612732, 0, 393225, -1610612732, 0, 393226, -1610612732, 0, 393227, -1610612733, 0 )

[node name="Layer 2 - GUI" type="CanvasLayer" parent="."]

[node name="VCInterface" type="VBoxContainer" parent="Layer 2 - GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -439.0
margin_top = 50.0
margin_right = 473.0
margin_bottom = 172.0
custom_constants/separation = 0
alignment = 1

[node name="HCGameTitle" type="HBoxContainer" parent="Layer 2 - GUI/VCInterface"]
margin_right = 912.0
margin_bottom = 89.0
custom_constants/separation = -26
alignment = 1

[node name="Label" type="Label" parent="Layer 2 - GUI/VCInterface/HCGameTitle"]
margin_left = 284.0
margin_right = 627.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 1 )
text = "KEY_LEGENDS"

[node name="HCSagasContainer" type="HBoxContainer" parent="Layer 2 - GUI/VCInterface"]
margin_top = 89.0
margin_right = 912.0
margin_bottom = 425.0

[node name="VCSaga0" type="VBoxContainer" parent="Layer 2 - GUI/VCInterface/HCSagasContainer"]
margin_right = 300.0
margin_bottom = 336.0

[node name="CContainer" type="MarginContainer" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0"]
margin_right = 300.0
margin_bottom = 200.0
grow_vertical = 2
rect_min_size = Vector2( 300, 200 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0/CContainer"]
position = Vector2( 141, 100 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 2 )
animation = "idle"

[node name="SagaTitle" type="Label" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0"]
margin_top = 204.0
margin_right = 300.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 3 )
text = "KEY_SAGA_0"
align = 1

[node name="BLevel0" type="Button" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0"]
margin_top = 248.0
margin_right = 300.0
margin_bottom = 290.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.447059, 0.0862745, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "KEY_SAGA_0_LEVEL_0"
flat = true

[node name="BLevel1" type="Button" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0"]
margin_top = 294.0
margin_right = 300.0
margin_bottom = 336.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.447059, 0.0862745, 1 )
disabled = true
action_mode = 0
enabled_focus_mode = 0
text = "KEY_SAGA_0_LEVEL_1"
flat = true

[node name="BLevel2" type="Button" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0"]
visible = false
margin_top = 332.0
margin_right = 300.0
margin_bottom = 370.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.447059, 0.0862745, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "KEY_SAGA_0_LEVEL_0"
flat = true

[node name="BLevel3" type="Button" parent="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0"]
visible = false
margin_top = 332.0
margin_right = 300.0
margin_bottom = 370.0
focus_mode = 0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.854902, 0.447059, 0.0862745, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "KEY_SAGA_0_LEVEL_0"
flat = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true
mix_target = 2

[connection signal="animation_finished" from="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0/CContainer/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="pressed" from="Layer 2 - GUI/VCInterface/HCSagasContainer/VCSaga0/BLevel0" to="." method="_on_BLevel0_pressed"]
